--- a/meta.yaml
+++ b/meta.yaml
@@ -18,8 +18,7 @@ requirements:
   run:
     - python==3.9.17
     - numpy==1.23.5, 
-    - pennylane==0.28.0,
-    - torch==2.0.1
+    - pennylane==0.28.0
 
 test:
   imports:
